--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -14,22 +14,26 @@
 
   <section>
     <div id="for-wrapper" *ngIf="showFor && (history_for.length > 0)">
-      <app-former-service [helperLook]="false"
+      <app-former-service *ngIf="allReviews !== undefined"
+                          [helperLook]="false"
                           [pour]="myName"
                           [par]="history_for[index_for].content.user"
                           [announceId]="history_for[index_for].idAnnounce"
                           [imgSrc]="history_for[index_for].content.image"
                           [announceAuthorId]="history_for[index_for].idUser"
+                          [announceReviews]="allReviews[history_for[index_for].idAnnounce]"
                           [date]="history_for[index_for].content.datejour">
       </app-former-service>
     </div>
     <div id="by-wrapper" *ngIf="showBy && (history_by.length > 0)">
-        <app-former-service [helperLook]="true"
+        <app-former-service *ngIf="allReviews !== undefined"
+                            [helperLook]="true"
                             [pour]="this.history_by[index_by].content.user"
                             [par]="myName"
                             [announceId]="history_by[index_by].idAnnounce"
                             [announceAuthorId]="history_by[index_by].idUser"
                             [imgSrc]="history_by[index_by].content.image"
+                            [announceReviews]="allReviews[history_by[index_by].idAnnounce]"
                             [date]="this.history_by[index_by].content.datejour">
         </app-former-service>
     </div>
