modification des seuils de rang

--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -3,7 +3,8 @@
 
   <!-- NOM PRENOM PHOTO -->
   <tr align="right"><button class="btn btn-primary" *ngIf="myProfil"
-                            (click)="router.navigate(['mes-infos'])">MODIFIER</button></tr>
+                            (click)="router.navigate(['mes-infos'])">MODIFIER</button>
+  </tr>
   <tr>
     <div class="card" >
       <table cellpadding="30">
@@ -66,7 +67,4 @@
     </div>
   </tr>
 </table>
-
-
-
 </div>
