change view of the liste of services

--- a/pfirst/src/app/service/service.component.html
+++ b/pfirst/src/app/service/service.component.html
@@ -1,5 +1,5 @@
 
-    <div class="card mb-3 rounded-lg rounded-lg" style="width:100%;">
+    <div class="card mb-3 rounded-lg rounded-lg" style="width: 300 px;">
       <div class="row no-gutters">
           <div class="col-md-2">
             <img [src]="serviceImage"  class="card-img-top" alt="...">
