--- a/pfirst/src/app/service/service.component.css
+++ b/pfirst/src/app/service/service.component.css
@@ -1,10 +1,10 @@
 .card-img-top{
-    height: 100%;
+    height: 100 px ;
     
 }
 
 .card{
-    width: 300px;
+    width: 500 px;
   }
 
 .annonce_courte {
