--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -157,7 +157,8 @@
                       [id]="service.idAnnounce"
                       [serviceDate]="service.content.datejour"
                       [status]="service.status"
-                      [service_descriptor]="service">
+                      [service_descriptor]="service"
+                      [idAuthor]="service.idUser">
                     </app-service-proposed>
                   </td>
                 </tr>
