--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -1,8 +1,8 @@
-
 <div class="card mb-3 rounded-lg rounded-lg" style="width:100%;">
   <div class="row no-gutters">
     <div class="col-md-2">
-      <img style="cursor: pointer" (click)="router.navigate(['propose/'+id])" [src]="serviceImage"  class="card-img-top" alt="...">
+      <img style="cursor: pointer" (click)="router.navigate(['propose/'+id])" [src]="serviceImage" class="card-img-top"
+           alt="...">
     </div>
     <div class="col-md-10">
       <div class="card-body">
@@ -21,20 +21,30 @@
               <table>
                 <tr>
                   <!-- BOUTONS -->
-                  <td><button [disabled]="this.status != 0" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
-                              [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
-                    Propositions</button></td>
-                  <td><button class="btn btn-primary" (click)="isCollapsed_bis = !isCollapsed_bis"
-                              [attr.aria-expanded]="!isCollapsed_bis" aria-controls="collapseExample_bis">
-                    Participants</button></td>
                   <td>
-                    <button *ngIf="this.status == 0" [disabled]="noAssignees" (click)="startService()" class="btn btn-outline-success">
-                      Lancer</button>
+                    <button [disabled]="this.status != 0" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
+                            [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
+                      Propositions
+                    </button>
                   </td>
-                <td>
-                  <button *ngIf="this.status === 1" [disabled]="noAssignees" (click)="endService()" class="btn btn-outline-danger">
-                    Terminer</button>
-                </td>
+                  <td>
+                    <button class="btn btn-primary" (click)="isCollapsed_bis = !isCollapsed_bis"
+                            [attr.aria-expanded]="!isCollapsed_bis" aria-controls="collapseExample_bis">
+                      Participants
+                    </button>
+                  </td>
+                  <td>
+                    <button *ngIf="this.status == 0" [disabled]="noAssignees" (click)="startService()"
+                            class="btn btn-outline-success">
+                      Lancer
+                    </button>
+                  </td>
+                  <td>
+                    <button *ngIf="this.status === 1" [disabled]="noAssignees" (click)="endService()"
+                            class="btn btn-outline-danger">
+                      Terminer
+                    </button>
+                  </td>
               </table>
             </div>
           </div>
@@ -45,8 +55,8 @@
   </div>
 
   <!-- STATUT DE L'ANNONCE -->
-  <a *ngIf = "this.status === 1" href="#" class="badge badge-pill badge-warning">En cours</a>
-  <a *ngIf = "this.status === 2" href="#" class="badge badge-pill badge-secondary">Terminée</a>
+  <a *ngIf="this.status === 1" href="#" class="badge badge-pill badge-warning">En cours</a>
+  <a *ngIf="this.status === 2" href="#" class="badge badge-pill badge-secondary">Terminée</a>
 
   <div id="collapseExample" [ngbCollapse]="isCollapsed">
     <span *ngIf="noHelper">
@@ -58,12 +68,13 @@
         <mat-toolbar-row *ngIf="!amIanAssignee(helper.idUser)">
             <span>{{helper.firstName}} {{helper.lastName}} vous a proposé son aide.</span>
             <span class="spacer"></span>
-            <mat-icon style="cursor:pointer" title="Voir le profil" class="icon" (click)="router.navigate(['profil/'+helper.idUser])">face</mat-icon>
-            <mat-icon style="cursor:pointer" class="icon" *ngIf="this.status == 0" (click)="acceptHelper(helper.idUser)"> done </mat-icon>
-            <!-- <mat-icon style="cursor:pointer" class="icon" *ngIf="this.status == 0 "> highlight_off </mat-icon>  -->
-            <!-- <mat-icon class="icon" *ngIf="this.status === 1">  Si l'annonce est en cours et que je ne suis pas dans les helpers
-              not_interested
-            </mat-icon> -->
+            <mat-icon style="cursor:pointer" title="Voir le profil" class="icon"
+                      (click)="router.navigate(['profil/'+helper.idUser])">face</mat-icon>
+            <mat-icon style="cursor:pointer" class="icon" *ngIf="this.status == 0"
+                      (click)="acceptHelper(helper.idUser)"> done </mat-icon>
+          <mat-icon style="cursor:pointer" class="icon" *ngIf="this.status == 0"
+                    (click)="refuse(helper.idUser)"> clear </mat-icon>
+
             <mat-icon class="icon" *ngIf="this.id == helper.idUser"> done_all </mat-icon>
         </mat-toolbar-row>
         </mat-toolbar>
@@ -72,10 +83,20 @@
 
   </div>
 
+  <!-- ## AFFICHAGE DES PARTICIPANTS ## -->
   <div id="collapseExample_bis" [ngbCollapse]="isCollapsed_bis">
     Les participants à votre annonces sont :
-    <div *ngFor="let assignee of this.assignees">
-      <span style="cursor: pointer" class="badge badge-pill badge-info"
-            (click)="router.navigate(['profil/'+ assignee])">{{name_assignees[assignee]}}</span>
-    </div>
+    <table>
+      <div *ngFor="let assignee of this.assignees">
+        <tr>
+          <td><img src="../../assets/data/profil_icone.png" (click)="router.navigate(['profil/'+ assignee])"
+                   id="profil_icone" alt=""></td>
+          <td>
+      <span style="font-size: large"><b>{{name_assignees[assignee]}}</b></span>
+          </td>
+          <td><img (click)="this.userService.getMailByID(assignee)" id="icone-mail"
+                   src="../../assets/data/mail_icone.png" alt=""></td>
+        </tr>
+      </div>
+    </table>
   </div>
