--- a/pfirst/src/app/service-proposed/service-proposed.component.html
+++ b/pfirst/src/app/service-proposed/service-proposed.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <div class="text-left">
           <h2 class="card-title">{{serviceName}} pour {{serviceUser}}<img *ngIf="accepted || enCours"
-                                                                          (click)="getMailByID(myID)"
+                                                                          (click)="this.userService.getMailByID(idAuthor)"
                                                                           id="icone-mail"
                                                                           src="../../assets/data/icone-mail.png" alt="">
           </h2>
