ajustements et tests notifs ok, debut de lien actions/notifs, merge necessaires #5

--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -11,6 +11,7 @@
 
 <div id="space"></div>
 
+<button class="btn btn-primary" (click)="handleRev()"> handle Rev</button>
 <button class="btn btn-primary" (click)="buildUp()"> Build Updater</button>
 <button class="btn btn-primary" (click)="updateNot()"> Update Not</button>
 <button class="btn btn-primary" (click)="uploadTestNotif()">Send notif</button>
