--- a/pfirst/src/app/service-proposed/service-proposed.component.html
+++ b/pfirst/src/app/service-proposed/service-proposed.component.html
@@ -17,7 +17,7 @@
         <div class="row no-gutters">
           <div class="col-md-10">
             <div class="text-right">
-              <a href="#" class="btn btn-primary" [routerLink]="[id]">Voir l'annonce</a>
+              <button  class="btn btn-primary" (click)="router.navigate(['propose/'+id])">Voir l'annonce</button>
             </div>
           </div>
         </div>
