gestion de note moyenne undefined

--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -15,8 +15,12 @@
             [ngStyle]="{'background-image':'url(' + getPdpPath() +')'}"
           ></div></td>
           <td><span class="user_identifier" *ngIf="info_user != undefined">{{info_user['firstName']}} {{info_user['lastName']}}</span></td>
-          <td><img style="width:50px" src="../../assets/data/star.png" alt=""> <span
-            style="font-size: large;color: dimgray">{{averageGrade}} <b>/5</b></span><i></i></td>
+          <td *ngIf="averageGrade != undefined"><img style="width:50px" src="../../assets/data/star.png" alt=""> <span
+            style="font-size: large;color: dimgray">{{averageGrade}} <b>/5</b></span><i></i>
+          </td>
+          <td *ngIf="averageGrade === undefined">
+            <span>Pas encore d'évaluation.</span>
+          </td>
         </tr>
         <tr align="center">
           <span style="cursor:pointer" id="info" ngbPopover="Un rang permet de juger de l'expérience d'un
