hide notifs quand on se déconnecte volontairement #5

--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -79,7 +79,7 @@
         </button>
       </td>
       <td>
-        <button (click)="this.authService.removeUserInfo(); stopWatcher()" *ngIf="this.authService.isAuthenticated()" class="btn btn-outline-danger" type="button">Se déconnecter
+        <button (click)="this.authService.removeUserInfo(); stopWatcher(); hideAllNotifs()" *ngIf="this.authService.isAuthenticated()" class="btn btn-outline-danger" type="button">Se déconnecter
         </button>
       </td>
       <td>
