--- a/pfirst/src/app/new-accompage/new-accompage.component.html
+++ b/pfirst/src/app/new-accompage/new-accompage.component.html
@@ -39,13 +39,52 @@
               
               
                
-                <label for ="city" ><h3>Ville</h3></label>
+                <label for ="ou" ><h2>Ou se ferra le service ? </h2></label>
+              
+                <table width="100%" border="1" cellspacing="1" cellpadding="5">
+                  <tr>
+                  
+                  <td> <div *ngIf="add===false  ">
+                    <button  type="button" id = "location-button"  (click)= "add=true;loca=false" class="btn btn-secondary" >Avec votre adress</button>
+                  </div>
+                  <div *ngIf="add===true && loca ===false ">
+                    <label for ="city" ><h3>Ville</h3></label>
                 <input type="text" id="city" class="form-control" formControlName="city">
                 <label for ="adress" ><h3>Adresse</h3></label>
                 <input type="text" id="adress" class="form-control" formControlName="adress">
-                <label for ="location" ><h3>Localisation</h3></label>
-                <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Get your position</button>
+                  </div>
+                  
+                  </td>
+                  <td>
+                    <span class="badge badge-secondary">OU</span>
+                  </td>
+                  <td>
+                    <div *ngIf="loca ===false ">
+                      <button  type="button" id = "location-button"  (click)= "loca=true; add=false" class="btn btn-secondary" >Avec votre geolocalisation</button>
+                    </div>
+                    <div *ngIf="add===false && loca ===true ">
+                      <label for ="location" ><h3>Votre localisation</h3></label>
+                  <button  type="button" id = "location-button"  (click)= "getLocation()" class="btn btn-secondary" >Appuyer</button>
+
+                  
+                    </div>
+                  </td>
+                  
+                  
+                  </tr>
+                  <td></td>
+                  <td></td>
+                  <td>
+                    <div *ngIf="map"> <app-mini-map [latitude]="this.info.latitude" [longitude]="this.info.longitude" ></app-mini-map></div>
+                  </td>
+            
+                  </table>
+              
                 
+                
+                  
+                
+              
                   
                 
               </div>
