--- a/pfirst/src/app/service/service.component.css
+++ b/pfirst/src/app/service/service.component.css
@@ -24,16 +24,16 @@
 }
 
 .card{
-    width: 500 px;
+    width: 100%;
     height: 100%;
 
 }
 
 :host-context(.theme-light) .card{
-    width: 300px;
+    width: 100%;
   }
 :host-context(.theme-dark) .card{
-  width: 300px;
+  width: 100%;
   background-color: grey;
 }
 
