--- a/pfirst/src/app/service-review/service-review.component.html
+++ b/pfirst/src/app/service-review/service-review.component.html
@@ -1,7 +1,7 @@
-<div class="card mb-3 rounded-lg rounded-lg" style="width:100%;">
+<div class="card mb-3 rounded-lg rounded-lg" style="width:800px; height: 150px;">
 <div class="row no-gutters">
   <div class="col-md-2">
-    <img [src]="image" class="card-img-top" alt="...">
+    <img [src]="image" class="card-img-top" alt="..." style="height: 130px; width: auto;">
   </div>
   <div class="col-md-10">
     <div class="card-body">
