reglages des suppression, droits de reviews + quelques mineurs #5

--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -9,16 +9,16 @@
 
 
 
-
+<!-- TESTING FOR NOTIFICATIONS
 <button class="btn btn-primary" (click)="handleRev()"> handle Rev</button>
 <button class="btn btn-primary" (click)="buildUp()"> Build Updater</button>
 <button class="btn btn-primary" (click)="updateNot()"> Update Not</button>
 <button class="btn btn-primary" (click)="uploadTestNotif()">Send notif</button>
 <button class="btn btn-primary" (click)="notificationService.sleepWatcher()">Stop checking</button>
 <button class="btn btn-primary" (click)="notificationService.wakeWatcher(5000)">Start checking</button>
+-->
 <!--
 <footer>
->>>>>>> a170e288b69fdc2bd16be7093d6f0129ee939ffd
   <app-footer id="footer"></app-footer>
 </footer>
 -->
